# AI-Builders-Bootcamp-8

./: README.md
python-tutor/: README.md  pyproject.toml
python-tutor/.claude/: settings.json
python-tutor/.claude/output-styles/: python-tutor.md
python-tutor/tutor/reference/: beautifulsoup-cheatsheet.md
session-1/: README.md  example-scrape_job_board.ipynb  pyproject.toml
session-1/data/: job_data.csv
session-1/live-coding-example/: jobs.csv  pyproject.toml  scraper.ipynb  scraper.py
session-2/: .env.example  README.md  example_1-paper_summarizer.ipynb  example_2-lead_scoring.ipynb  pyproject.toml
session-2/prompts/: prompt-1.md  prompt-2.md  prompt-3.md
session-3/: README.md  example_1-rag_with_llamaindex.ipynb  example_2-unstructured_survey_analysis.ipynb
session-3/data/: survey.csv
session-4/: .env.example  README.md  example_1-youtube_agent.ipynb  example_2-notion_mcp_agent.ipynb  pyproject.toml
session-4/context/: instructions.md
session-5/: 1-generate_posts.py  2-annotation_app.py  3-run_evals.py  README.md  evals.py  pyproject.toml
session-5/data/2025-11-03_prompt-v1/: request_response-annotations.csv  request_response-evals.csv  request_response.csv
session-5/data/2025-11-03_prompt-v2/: request_response-annotations.csv  request_response-evals.csv  request_response.csv
session-5/data/2026-02-12_prompt-v3/: request_response-annotations.csv  request_response-evals.csv  request_response.csv
session-5/prompts/: prompt-v1.md  prompt-v2.md  prompt-v3.md
session-6/: .env.example  README.md
(+8 files in other folders)
