[project]
name = "session-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.1.1",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.9",
    "openai>=2.1.0",
    "pandas>=2.3.3",
    "pydantic>=2.11.10",
    "pymupdf>=1.26.5",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
]
