[project]
name = "session-4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.3",
    "openai>=2.16.0",
    "openai-agents>=0.8.0",
    "python-dotenv>=1.2.1",
    "youtube-transcript-api>=1.2.4",
]
